Fix dark mode

--- a/static/styles.css
+++ b/static/styles.css
@@ -8,6 +8,10 @@
     border-radius: 10px;
 }
 
+[data-bs-theme="dark"] .card-booked {
+    background-color: #002040;
+}
+
 /* template.html */
 
 /* Size for brand */
@@ -65,9 +69,9 @@ nav .navbar-brand {
 
 .card-wrapper {
     /* this properties ovveride the fact that this is really a link*/
-    color: black;
+    color: inherit;
     :hover {
-        color: black;
+        color: inherit;
     }
     text-decoration: none;
 }
